Fixed dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,6 @@
 @tailwind utilities;
 
 :root {
-    /* Dark mode variables */
     --dark-bg: #121212;
     --dark-bg-secondary: #1e1e1e;
     --dark-text: #ffffff;
@@ -11,21 +10,34 @@
     --dark-border: #4a4a4a;
     --dark-hover-bg: #2c2c2c;
     --dark-hover-border: #5a5a5a;
-
-    /* Light mode variables */
     --light-bg: #ffffff;
     --darker-bg: #f0f0f0;
     --light-text: #121212;
     --hover-bg: #d1d5db;
+    --background-color: var(--light-bg);
+    --text-color: var(--light-text);
+    --transition-duration: 0.3s;
 }
 
-/* Dark mode styles */
-body.dark-mode {
-    background-color: var(--dark-bg);
-    color: var(--dark-text);
+body {
+    background-color: var(--background-color);
+    color: var(--text-color);
+    transition: background-color var(--transition-duration) ease,
+        color var(--transition-duration) ease;
+}
 
+* {
+    transition: background-color var(--transition-duration) ease;
+}
+
+body.dark-mode {
+    --background-color: var(--dark-bg);
+    --text-color: var(--dark-text);
+}
+
+.dark-mode {
     .bg-white,
-    body.dark-mode .bg-white {
+    .bg-white-100 {
         background-color: var(--dark-bg-secondary);
     }
     .bg-black {
@@ -33,9 +45,6 @@ body.dark-mode {
     }
     .bg-gray-100 {
         color: var(--light-text);
-    }
-    .bg-white-100 {
-        background-color: var(--darker-bg);
     }
 
     .text-white {
@@ -56,7 +65,6 @@ body.dark-mode {
         border-color: var(--light-bg);
     }
 
-    /* Hover states */
     .hover\:text-black:hover {
         color: var(--dark-text);
     }
